# teehee

./: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
.githooks/: README.md  pre-commit
.github/workflows/: ci.yml  format.yml
src/: chaos.rs  fractal.rs  lib.rs  main.rs  stc.rs  steganography.rs
web/: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml
web/src/: api.rs  cleanup.rs  compiler.rs  db.rs  error.rs  image_match.rs  main.rs  models.rs  state.rs
web/templates/: base.html  index.html
