[package]
name = "teehee"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "teehee"
path = "src/main.rs"

[dependencies]
image = "0.25"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
rand = "0.8"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"
aes-gcm = "0.10"
base64 = "0.22"

[build-dependencies]
rand = "0.8"
base64 = "0.22"
